--- a/src/pages/A-Propos/_A-Propos.scss
+++ b/src/pages/A-Propos/_A-Propos.scss
@@ -1,29 +1,39 @@
-// Collapse module sur toute la largeur
-.collapseModules__container--Full {
-    width: 100%;
-    padding-top: 30px;
+.collapseModules {
+    &__container--Full {
+        width: 100%;
+        padding-top: 30px;
 
-    @include mediaqueries-max($tablet) {
-        width: 80%;
-        margin: auto;
-    }
+        @include mediaqueries-max($tablet) {
+            width: 80%;
+            margin: auto;
+        }
 
-    .collapseModule {
+        .collapseModule {
+            &__titleBanner {
+                font-size: map-get($taille-texte, l);
 
-        &__titleBanner,
-        &__content {
-            font-size: map-get($taille-texte, l);
+                @include mediaqueries-max($tablet) {
+                    font-size: 13px;
+                }
+            }
+
+            &__content {
+                font-size: map-get($taille-texte, l);
+
+                @include mediaqueries-max($tablet) {
+                    font-size: 12px;
+                }
+            }
         }
     }
 
-}
-
-.collapseModules__column--Full {
-    width: 100%;
-    margin-bottom: $margin-l;
-
-    @include mediaqueries-max($tablet) {
+    &__column--Full {
         width: 100%;
-        margin-bottom: $margin-m;
+        margin-bottom: $margin-l;
+
+        @include mediaqueries-max($tablet) {
+            width: 100%;
+            margin-bottom: $margin-m;
+        }
     }
 }
